[package]
name = "file_encrypt_decrypt_aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.7"
hex = { version = "0.4.3", features = [] }
base64 = "0.21.7"
rpassword = "7.3.1"
anyhow = "1.0.79"
clap = "4.5.0"
rsa = "0.9.6"

